# bicycle_rental

./: .env  .gitignore  docker-compose.yml  pyproject.toml
apps/main/: admin.py  urls.py
apps/main/migrations/: 0001_initial.py  0002_bicycle_rental_status.py  0003_alter_bicycle_bike_type.py  0004_bicycle_price.py  0005_rename_price_rentalhistory_total_price.py
apps/main/models/: __init__.py  bicycle.py  rental.py  user.py
apps/main/serializers/: __init__.py  bicycle.py  rental.py  user.py
apps/main/urls/: auth.py  main.py
apps/main/views/: __init__.py  bicycle.py  rental.py  user.py
core/: spectacular_urls.py  urls.py
core/settings/: JWT.py  __init__.py  databases.py  installed_apps.py  rest_framework.py  spectacular.py  swagger.py  templates.py
