[tool.poetry]
name = "bicycle-rental"
version = "0.1.0"
description = ""
authors = ["Timurxboy <timurxboy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
drf-yasg = "^1.21.7"
setuptools = "^70.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
